syntax = "proto3";
package password_history;

option go_package = "nfxid/protos/gen/auth/password_history;passwordhistorypb";

import "google/protobuf/timestamp.proto";

// 密码历史信息
// Note: No tenant_id because password history is user-level, not tenant-level (user can belong to multiple tenants)
message PasswordHistory {
  string id = 1;                 // 历史ID (UUID)
  string user_id = 2;            // 用户ID (UUID)
  string password_hash = 3;      // 密码哈希 (varchar(255))
  optional string hash_alg = 4;  // 哈希算法 (varchar(50))
  google.protobuf.Timestamp created_at = 5; // 创建时间
}

// PasswordHistory 服务 - 供其他服务通过 gRPC 管理密码历史
service PasswordHistoryService {
  // 根据ID获取密码历史
  rpc GetPasswordHistoryByID (GetPasswordHistoryByIDRequest) returns (GetPasswordHistoryByIDResponse);
  
  // 根据用户ID获取密码历史列表
  rpc GetPasswordHistoriesByUserID (GetPasswordHistoriesByUserIDRequest) returns (GetPasswordHistoriesByUserIDResponse);
}

// PasswordHistory Service Messages
message GetPasswordHistoryByIDRequest {
  string id = 1;
}

message GetPasswordHistoryByIDResponse {
  PasswordHistory password_history = 1;
}

message GetPasswordHistoriesByUserIDRequest {
  string user_id = 1;
}

message GetPasswordHistoriesByUserIDResponse {
  repeated PasswordHistory password_histories = 1;
}
